<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity">

    <TextView
        android:id="@+id/Data_show_gsr_window"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="179dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="345dp"
        android:gravity="start|center_vertical"
        android:text="@string/Data_show_gsr_window_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/data_stop_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="634dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:layout_marginBottom="49dp"
        android:background="#FF9800"
        android:onClick="switch_to_decision_or_error"
        android:text="@string/data_stop_button_name"
        app:backgroundTint="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Data_show_title"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="611dp"
        android:gravity="center"
        android:text="@string/Data_show_title_string"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Data_show_gsr_title"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="345dp"
        android:gravity="end|center_vertical"
        android:text="@string/Data_show_gsr_title_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="GSR" />

    <TextView
        android:id="@+id/Data_show_heart_rate_title"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="211dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="470dp"
        android:gravity="end|center_vertical"
        android:text="@string/Data_show_heart_rate_title_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Puls" />

    <TextView
        android:id="@+id/Data_show_heart_rate_window"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="179dp"
        android:layout_marginTop="211dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="470dp"
        android:gravity="start|center_vertical"
        android:text="@string/data_show_heart_rate_window_box"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Data_show_voltage_title"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="466dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="215dp"
        android:gravity="end|center_vertical"
        android:text="@string/Data_show_voltage_title_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Napięcie" />

    <TextView
        android:id="@+id/Data_show_voltage_window"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="179dp"
        android:layout_marginTop="466dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="215dp"
        android:gravity="start|center_vertical"
        android:text="@string/Data_show_voltage_window_box"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>