<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ErrorActivity">

    <TextView
        android:id="@+id/activity_error_title"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="632dp"
        android:gravity="center"
        android:text="@string/activity_error_title_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_error_end_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="642dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="47dp"
        android:text="@string/activity_error_end_button_string"
        android:onClick="end_app"
        app:backgroundTint="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_error_login_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="121dp"
        android:background="#FF9800"
        android:text="@string/activity_error_login_button_string"
        android:onClick="errorLaunchLoginActivity"
        app:backgroundTint="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_error_comm_TextView"
        android:layout_width="320dp"
        android:layout_height="160dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="284dp"
        android:text="Error"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>