<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextPasswordPassword"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="498dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="185dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text="DesktopTest1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_login_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="634dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:layout_marginBottom="49dp"
        android:background="#FF9800"
        android:gravity="center"
        android:onClick="switch_to_data"
        android:text="@string/activity_login_button"
        app:backgroundTint="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_login_title"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:layout_marginBottom="628dp"
        android:gravity="center"
        android:text="@string/activity_login_title_string"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_login_login_title"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="11dp"
        android:gravity="start"
        android:text="@string/activity_login_login_title_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_login_password_title"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="445dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="11dp"
        android:gravity="start"
        android:text="@string/activity_login_password_title_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text="DesktopPsychotest1"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_password_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_login_server_address"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="11dp"
        android:text="Adres serwera"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextServerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_login_port_name"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="283dp"
        android:layout_marginBottom="11dp"
        android:text="Port"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPortName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextServerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="192.168.0.100"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_port_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPortName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="1883"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_login_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>